// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockUI > renders correctly when blocked 1`] = `
<div>
  <div
    aria-busy="true"
    class="relative"
    data-slot="base"
  >
    
    Content
    
    <div
      class="absolute top-0 left-0 size-full bg-black/50"
      data-slot="mask"
    />
  </div>
</div>
`;

exports[`BlockUI > renders correctly when not blocked 1`] = `
<div>
  <div
    aria-busy="false"
    class="relative"
    data-slot="base"
  >
    
    Content
    
    <!--v-if-->
  </div>
</div>
`;
